--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             text-align: center;
         }
         .profile-pic {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
+            width: 200px;
+            height: auto;
+            border-radius: 10px;
+            object-fit: contain;
             border: 3px solid white;
         }
         h1, h2 {
